--- a/projects/horoscope/css/horoscope.css
+++ b/projects/horoscope/css/horoscope.css
@@ -1,20 +1,43 @@
 *{
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
+    height: 100vh;
+    width: 100%;
+    background-image: url(./../img/Galaxy-stars.gif);
+    background-size: cover;
+margin: 0;display: flex;}
+h1{
+    width: 100%;
     text-align: center;
+    height: 75px;
+    padding-top: 100px;
+    margin: 0;
+    color: white;
+}
+
+
+.container{
+    margin-top: 33%;
+    height: 500px;
+    width: 500px;
     display: flex;
-    background-color: teal;
-    flex-direction: column;
-    margin-bottom: 120px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: auto;
+    background: linear-gradient(69deg, #53769d, transparent);
+    border-radius: 30px;
+    text-align: center;
+    /* margin-top: 200px; */    
 }
-
-div{
-    flex: 1;
-    flex-grow: 2;
+h2{
+    margin: 0;
+    width: 80%;
+    text-align: center;
+    color: white;
 }
-
 form{
     flex:1;
     justify-content: center;
@@ -23,13 +46,11 @@ form{
 h1{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
-
-footer{
-    background-color: brown;
-    flex: 1;
-    position: fixed; 
-    width: 100%;
-    bottom: 0%;
-    left: 0;
-    /* height: 70px; */
+select, button{
+    height: 50px;
+    width: 20%;
+    border-radius: 15px;
+    border: black;
+    font-weight: bold;
+    text-align: center;
 }
