--- a/projects/todo/css/todo.css
+++ b/projects/todo/css/todo.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: rgb(34, 34, 77);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
@@ -25,7 +25,7 @@ body > div{
 
 body > div > form{
     background-color: darkgrey;
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
 body > div > ul{
